public class Constant 
{
    public const string ANIM_LeftRight = "LeftRight";
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_DIE = "Dead";
    public const string ANIM_UP = "Up";
    public const string ANIM_DOWN = "Down";
    public const string TAG_CHARACTER = "Character";
    public const string TAG_FIRERATE = "FireRate";
    
}